@@ -4,6 +4,8 @@ import com.github.betonom.java_kanban.entities.Epic;
 import com.github.betonom.java_kanban.entities.Subtask;
 import com.github.betonom.java_kanban.entities.Task;
 import com.github.betonom.java_kanban.entities.TaskStatus;
+import com.github.betonom.java_kanban.exceptions.HasInteractionException;
+import com.github.betonom.java_kanban.exceptions.NotFoundException;
 import com.github.betonom.java_kanban.managers.HistoryManager;
 import com.github.betonom.java_kanban.managers.Managers;
 import com.github.betonom.java_kanban.managers.TaskManager;
@@ -39,11 +41,11 @@ public class InMemoryTaskManager implements TaskManager {
 
     @Override
     public void clearTasks() {
-        tasks.values().stream()
+        getTasksList().stream()
                 .peek(task -> historyManager.remove(task.getId()))
                 .filter(task -> task.getStartTime() != null)
                 .peek(task -> prioritizedTasks.remove(task))
-                .findAny();
+                .collect(Collectors.toList());
 
         tasks.clear();
     }
@@ -51,6 +53,9 @@ public class InMemoryTaskManager implements TaskManager {
     @Override
     public Task getTaskById(int id) {
         Task task = tasks.get(id);
+        if (task == null) {
+            throw new NotFoundException("Задача не найдена");
+        }
         historyManager.add(task);
         return task;
     }
@@ -61,7 +66,7 @@ public class InMemoryTaskManager implements TaskManager {
             return;
         }
         if (isTaskCrossAnyOfTasks(task)) {
-            return;
+            throw new HasInteractionException("Задача пересекается с другими задачами");
         }
 
         task.setId(taskCounter);
@@ -78,17 +83,24 @@ public class InMemoryTaskManager implements TaskManager {
             return;
         }
         if (isTaskCrossAnyOfTasks(task)) {
-            return;
+            throw new HasInteractionException("Задача пересекается с другими задачами");
         }
         if (tasks.containsKey(task.getId())) {
             tasks.put(task.getId(), task);
+        } else {
+            throw new NotFoundException("Задача для обновления не найдена");
         }
     }
 
     @Override
     public void removeTaskById(int id) {
         historyManager.remove(id);
-        if (tasks.get(id).getStartTime() != null)
+        Task task = tasks.get(id);
+        if (task == null) {
+            throw new NotFoundException("Задача не найдена");
+        }
+
+        if (task.getStartTime() != null)
             prioritizedTasks.remove(tasks.get(id));
         tasks.remove(id);
     }
@@ -104,13 +116,15 @@ public class InMemoryTaskManager implements TaskManager {
     public void clearEpics() {
         epics.values().stream()
                 .peek(task -> historyManager.remove(task.getId()))
-                .findAny();
+                .collect(Collectors.toList());
+        ;
 
         subtasks.values().stream()
                 .peek(task -> historyManager.remove(task.getId()))
                 .filter(task -> task.getStartTime() != null)
                 .peek(task -> prioritizedTasks.remove(task))
-                .findAny();
+                .collect(Collectors.toList());
+        ;
         epics.clear();
         subtasks.clear();
     }
@@ -118,6 +132,9 @@ public class InMemoryTaskManager implements TaskManager {
     @Override
     public Epic getEpicById(int id) {
         Epic epic = epics.get(id);
+        if (epic == null) {
+            throw new NotFoundException("Задача не найдена");
+        }
         historyManager.add(epic);
         return epic;
     }
@@ -125,6 +142,10 @@ public class InMemoryTaskManager implements TaskManager {
     @Override
     public void createNewEpic(Epic epic) {
         if (epic == null) {
+            return;
+        }
+
+        if (epic.getSubtasksId() == null) {
             return;
         }
 
@@ -148,27 +169,36 @@ public class InMemoryTaskManager implements TaskManager {
             setEpicTimeVariables(epic);
 
             epics.put(epic.getId(), epic);
+        } else {
+            throw new NotFoundException("Эпик для обновления не найден");
         }
     }
 
     @Override
     public void removeEpicById(int id) {
         historyManager.remove(id);
-
-
         Epic epic = epics.get(id);
+        if (epic == null) {
+            throw new NotFoundException("Задача не найдена");
+        }
+
         ArrayList<Integer> subtasksId = epic.getSubtasksId();
         while (!subtasksId.isEmpty()) {
-            removeSubtaskById(subtasksId.get(0));
+            removeSubtaskById(subtasksId.getFirst());
         }
 
         epics.remove(id);
     }
 
-    public ArrayList<Subtask> getEpicSubtasks(Epic epic) {
+    public ArrayList<Subtask> getEpicSubtasks(int id) {
+        Epic epic = epics.get(id);
+
+        if (epic == null) {
+            throw new NotFoundException("Эпик не найден");
+        }
         return new ArrayList<>(
                 epic.getSubtasksId().stream()
-                        .map(id -> subtasks.get(id))
+                        .map(subtaskId -> subtasks.get(subtaskId))
                         .collect(Collectors.toList())
         );
     }
@@ -186,12 +216,14 @@ public class InMemoryTaskManager implements TaskManager {
                 .peek(task -> historyManager.remove(task.getId()))
                 .filter(task -> task.getStartTime() != null)
                 .peek(task -> prioritizedTasks.remove(task))
-                .findAny();
+                .collect(Collectors.toList());
+        ;
 
         epics.values().stream()
                 .peek(epic -> epic.getSubtasksId().clear())
                 .peek(epic -> setEpicTimeVariables(epic))
-                .findAny();
+                .collect(Collectors.toList());
+        ;
 
         subtasks.clear();
     }
@@ -199,6 +231,9 @@ public class InMemoryTaskManager implements TaskManager {
     @Override
     public Subtask getSubtaskById(int id) {
         Subtask subtask = subtasks.get(id);
+        if (subtask == null) {
+            throw new NotFoundException("Подзадача не найдена");
+        }
         historyManager.add(subtask);
         return subtask;
     }
@@ -209,7 +244,7 @@ public class InMemoryTaskManager implements TaskManager {
             return;
         }
         if (isTaskCrossAnyOfTasks(subtask)) {
-            return;
+            throw new HasInteractionException("Подзадача пересекается с другими задачами");
         }
         int epicId = subtask.getEpicId();
         Epic epic = epics.get(epicId);
@@ -234,7 +269,7 @@ public class InMemoryTaskManager implements TaskManager {
             return;
         }
         if (isTaskCrossAnyOfTasks(subtask)) {
-            return;
+            throw new HasInteractionException("Подзадача пересекается с другими задачами");
         }
         if (subtasks.containsKey(subtask.getId())) {
             //проверка на возможность добавления в эпик подзадачи самой подзадачи
@@ -256,13 +291,20 @@ public class InMemoryTaskManager implements TaskManager {
             epic.setStatus(getStatusEpic(epic));
 
             setEpicTimeVariables(epic);
+        } else {
+            throw new NotFoundException("Подзадача для обновления не найдена");
         }
     }
 
     @Override
     public void removeSubtaskById(int id) {
         historyManager.remove(id);
-        if (subtasks.get(id).getStartTime() != null)
+        Subtask subtask = subtasks.get(id);
+        if (subtask == null) {
+            throw new NotFoundException("Подзадача не найдена");
+        }
+
+        if (subtask.getStartTime() != null)
             prioritizedTasks.remove(subtasks.get(id));
 
         int epicId = subtasks.get(id).getEpicId();
@@ -292,7 +334,7 @@ public class InMemoryTaskManager implements TaskManager {
         boolean isAllDone = true;
 
         // Получение массива подзадач из эпика
-        ArrayList<Subtask> epicSubtasks = getEpicSubtasks(epic);
+        ArrayList<Subtask> epicSubtasks = getEpicSubtasks(epic.getId());
 
         for (Subtask subtask : epicSubtasks) {
 
@@ -321,14 +363,14 @@ public class InMemoryTaskManager implements TaskManager {
     }
 
     private void setEpicTimeVariables(Epic epic) {
+        epic.setDuration(Duration.ofSeconds(0));
         if (epic.getSubtasksId().isEmpty()) {
-            epic.setDuration(Duration.ofSeconds(0));
             return;
         }
 
-        List<Subtask> epicSubtasks = getEpicSubtasks(epic).stream()
-                .filter(subtask -> subtask.getStartTime() != null)
+        List<Subtask> epicSubtasks = getEpicSubtasks(epic.getId()).stream()
                 .peek(subtask -> epic.setDuration(epic.getDuration().plus(subtask.getDuration())))
+                .filter(subtask -> subtask.getStartTime() != null)
                 .sorted(Comparator.comparing(Task::getStartTime))
                 .collect(Collectors.toList());
 
